src/objects/SubscriptionRatePlanHistory__c.object
<CustomObject>
    <description>Rate plans represent a price or a collection of prices for a service you sell.</description>
    <fields>
        <fullName>AmendmentType__c</fullName>
        <description>The type of amendment associated with the rate plan. This field only applies to amendment rate plans.</description>
        <label>Amendment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>The date when the Subscription Rate Plan was created in the DAZN system.</description>
        <label>DAZN Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SubscriptionHistory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>SubscriptionHistory__c</referenceTo>
        <relationshipLabel>Subscription Rate Plans History</relationshipLabel>
        <relationshipName>Subscription_Rate_Plans_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubscriptionRatePlanName__c</fullName>
        <description>Full rate plan name.</description>
        <label>Subscription Rate Plan Name (Long Name)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpdatedDate__c</fullName>
        <description>The date when the Subscription Rate Plan was updated in the DAZN system.</description>
        <label>DAZN Updated Date</label>
        <type>DateTime</type>
    </fields>
    <label>DAZN Subscription Rate Plan History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>External_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Subscription Rate Plan Name (Short Name)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DAZN Subscription Rate Plans History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>